@@ -1,3 +1,4 @@
+- when basesystem can't be selected, display the reason
 - also load dm-zero for dmraid
 
 Version 10.4.201 - 17 September 2007, by Pascal "Pixel" Rigaux
